# diploma-2025

./: .gitignore  CMakeLists.txt
cmake/: install_benchmark.cmake
src/: CMakeLists.txt  consts.h
src/benchmark/: CMakeLists.txt  atomic-counter-logger.cpp  atomic-counter-logger.h  coro.cpp  coro.h  main.cpp
src/benchmark/counter/: atomic-multiple-counter.cpp  atomic-multiple-counter.h  counter-dumper.cpp  counter-dumper.h
src/benchmark/optionsManager/: options-manager.cpp  options-manager.h  options-parser.cpp  options-parser.h  register-option.h
src/core/: coro-mutex.cpp  coro-mutex.h  lf-queue.h  singleton.h  task-manager.cpp  task-manager.h  task.cpp  task.h  thread-pool.cpp  thread-pool.h  ts-queue.h
src/coro-mutex-test/: main.cpp
src/race-condition/: main.cpp
src/std-mutex-test/: main.cpp
tests/unit/: CMakeLists.txt  coroMutexTest.cpp  lfQueueTest.cpp  main.cpp
tools/: gen_bench_graphic.py  gen_bench_graphic_comparison.py  gen_bench_usage_diagram.py  gen_bench_usage_diagram_comparison.py  gen_summary.py  run.sh  run_benchmark.sh  setup_bench_graphic_venv.sh  setup_benchmark_venv.sh
